syntax = "proto3";

option csharp_namespace = "Notification.API.Protos";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

package NotificationAPI;

service NotificationGrpc{
	rpc BulkInsert(NotificationGrpcRequest) returns (google.protobuf.Int64Value);
	rpc GetListByReceiver(NotificationFilterModelGrpc) returns (NotificationPageListGrpcDTO);
	rpc GetById(google.protobuf.StringValue) returns (NotificationDTOGrpc);
	rpc Update(UpdateNotificationRequestGrpc) returns (NotificationDTOGrpc);
	rpc UpdateViewedNotification(google.protobuf.StringValue) returns (NotificationDTOGrpc);
	//rpc PushNotification(PushNotificationRequestGrpc) returns (PushNotificationResponseGrpc);
	rpc SendSms(SendSmsRequestGrpc) returns (SendSmsResponseGrpc);
	rpc SendMail(SendMailRequestGrpc) returns (SendMailResponseGrpc);

	rpc PushNotificationByDepartment(PushNotificationRequestGrpc) returns (PushNotificationResponseGrpc);
	rpc PushNotificationByRole(PushNotificationRequestGrpc) returns (PushNotificationResponseGrpc);
	rpc PushNotificationByUids(PushNotificationRequestGrpc) returns (PushNotificationResponseGrpc);
	rpc PushNotificationByCustomerUids(PushNotificationRequestGrpc) returns (PushNotificationResponseGrpc);
}

message SendMailRequestGrpc {
	google.protobuf.StringValue emails = 1;
	google.protobuf.StringValue subject = 2;
	google.protobuf.StringValue body = 3;
}
message SendMailResponseGrpc {
	bool success = 1;
}

message SendSmsRequestGrpc {
	google.protobuf.StringValue phoneNumbers = 1;
	google.protobuf.StringValue message = 2;
}
message SendSmsResponseGrpc {
	bool success = 1;
}

message PushNotificationRequestGrpc {
	google.protobuf.Int32Value type = 1;
	google.protobuf.Int32Value zone = 2;
	google.protobuf.StringValue sender = 3;
	google.protobuf.StringValue senderId = 4;
	google.protobuf.StringValue receiver = 5;
	google.protobuf.StringValue receiverId = 6;
	google.protobuf.StringValue title = 7;
	google.protobuf.StringValue content = 8;
	google.protobuf.StringValue payload = 9;
	google.protobuf.BoolValue isStaff = 10;
	google.protobuf.StringValue deviceToken = 11;
	google.protobuf.StringValue uids = 12;
	google.protobuf.StringValue platform = 13;
	google.protobuf.Int32Value category = 14;
	google.protobuf.StringValue roleCode = 15;
	google.protobuf.StringValue departmentCode = 16;
}

message PushNotificationResponseGrpc {
	bool success = 1;
}

message NotificationGrpcRequest {
	repeated NotificationCommand notificationCommands = 1;
}

message UpdateNotificationRequestGrpc {
	google.protobuf.StringValue id = 1;
	NotificationCommand notificationModel = 2;
}

message NotificationFilterModelGrpc{
	google.protobuf.StringValue receiverId = 1;
	google.protobuf.Int32Value take = 2;
	google.protobuf.Int32Value skip = 3;
	google.protobuf.Int32Value notificationType = 4;
	google.protobuf.BoolValue isRead = 5;
}

message NotificationCommand {
	google.protobuf.Int32Value    type = 1;
	google.protobuf.Int32Value    zone = 2;
	google.protobuf.StringValue sender = 3;
	google.protobuf.StringValue senderId = 4;
	google.protobuf.StringValue receiver = 5;
	google.protobuf.StringValue receiverId = 6;
	google.protobuf.StringValue title = 7;
	google.protobuf.StringValue content = 8;
	google.protobuf.StringValue payload = 9;
	google.protobuf.BoolValue   isRead = 10;
	google.protobuf.StringValue   id = 11;
	google.protobuf.Timestamp   createdDate = 12;
	google.protobuf.BoolValue   isShow = 13;
	google.protobuf.Int32Value   category = 14;
	google.protobuf.BoolValue   isStaff = 15;
}

message NotificationPageListGrpcDTO{
	repeated NotificationDTOGrpc subset = 1;
	google.protobuf.Int32Value  count = 2;
	google.protobuf.Int32Value  pageCount = 3;
	google.protobuf.Int32Value  totalItemCount = 4;
	google.protobuf.Int32Value  skip = 5;
	google.protobuf.Int32Value  take = 6;
	bool  hasPreviousPage = 7;
	bool  hasNextPage = 8;
	bool  isFirstPage = 9;
	bool  isLastPage = 10;
}

message NotificationDTOGrpc {
	google.protobuf.Int32Value    type = 1;
	google.protobuf.Int32Value    zone = 2;
	google.protobuf.StringValue sender = 3;
	google.protobuf.StringValue senderId = 4;
	google.protobuf.StringValue receiver = 5;
	google.protobuf.StringValue receiverId = 6;
	google.protobuf.StringValue title = 7;
	google.protobuf.StringValue content = 8;
	google.protobuf.StringValue payload = 9;
	google.protobuf.BoolValue   isRead = 10;
	google.protobuf.StringValue   id = 11;
	google.protobuf.StringValue   readableTime = 12;
	google.protobuf.Timestamp   createdDate = 13;

}